envoy/lb_envoy.yaml
listeners:
  - name: listener_0
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8090
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.
http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: backend
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: crawl_service
              http_filters:
                - name: envoy.filters.http.router

clusters:
  - name: crawl_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    health_checks:
      - timeout: 1s
        interval: 2s
        unhealthy_threshold: 2
        healthy_threshold: 3
        http_health_check:
          path: "/health" #if I changed this to "/" (based on nginx/conf.d), would that be a bad practice?
    load_assignment:
      cluster_name: crawl_service
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: crawlweb1
                    port_value: 8081
            - endpoint:
                address:
                  socket_address:
                    address: crawlweb2
                    port_value: 8082
            - endpoint:
                address:
                  socket_address:
                    address: crawlweb3
                    port_value: 8083
